@@ -567,33 +567,6 @@
 	max-width: 100%;
 }
 
-.wp-block-embed {
-	&.is-type-video {
-		.wp-block-embed__wrapper {
-			width: 100%;
-			position: relative;
-			&::before {
-				padding-top: 56.25%;
-				content: "";
-				display: block;
-			}
-			padding: 0 0 0 0; // 16:9 ratio
-			height: auto;
-			display: block;
-			> iframe,  > object {
-				position: absolute;
-				width: 100%;
-				height: 100%;
-				top: 0;
-				left: 0;
-				bottom: 0;
-				right: 0;
-			}
-		}
-	}
-}
-
-
 .wp-block-image img {
 	display: block;
 }
@@ -629,6 +602,11 @@ ul.wp-block-latest-posts.is-grid.alignwide {
 			font-size: 13px;
 		}
 		padding: 0px;
+	}
+	&.is-large {
+		cite {
+			text-align: left;
+		}
 	}
 	border-left-width: 4px;
 	border-left-color: currentColor;
