@@ -1905,28 +1905,6 @@ input[type="radio"], input[type="checkbox"] {
   max-width: 100%;
 }
 
-.wp-block-embed.is-type-video .wp-block-embed__wrapper {
-  width: 100%;
-  position: relative;
-  padding: 0 0 0 0;
-  height: auto;
-  display: block;
-}
-.wp-block-embed.is-type-video .wp-block-embed__wrapper::before {
-  padding-top: 56.25%;
-  content: "";
-  display: block;
-}
-.wp-block-embed.is-type-video .wp-block-embed__wrapper > iframe, .wp-block-embed.is-type-video .wp-block-embed__wrapper > object {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-}
-
 .wp-block-image img {
   display: block;
 }
@@ -1965,6 +1943,9 @@ ul.wp-block-latest-posts.is-grid.alignwide {
 }
 .wp-block-quote.is-style-large cite {
   font-size: 13px;
+}
+.wp-block-quote.is-large cite {
+  text-align: left;
 }
 .wp-block-quote > * {
   margin-left: 16px;
